--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,27 +3,27 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #191919;
+		--foreground: #ededed;
+	}
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	color: var(--foreground);
+	background: var(--background);
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo {
-  position: absolute;
-  top: 15px; /* Space from the top */
-  left: 15px; /* Space from the left */
-  width: 125px; /* Adjust size */
-  height: auto; /* Maintain aspect ratio */
+	position: absolute;
+	top: 15px; /* Space from the top */
+	left: 15px; /* Space from the left */
+	width: 125px; /* Adjust size */
+	height: auto; /* Maintain aspect ratio */
 }
